--- a/PETR_RESULTS_ANALYSIS.ipynb
+++ b/PETR_RESULTS_ANALYSIS.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Renaming columns to english"
+    "### Renaming columns"
    ]
   },
   {
